@@ -31,6 +31,7 @@ extern "C" {
 #define HXbitmap_test(map, bit) \
 	((bool)(__HXbitmap_quant(map, bit) & (1ULL << (bit % __HXbitmap_bpq(*(map))))))
 
+struct HXdir;
 struct stat;
 struct timespec;
 struct timeval;
@@ -44,9 +45,9 @@ enum {
 	HXF_KEEP = 1 << 2,
 };
 
-extern void *HXdir_open(const char *);
-extern const char *HXdir_read(void *);
-extern void HXdir_close(void *);
+extern struct HXdir *HXdir_open(const char *);
+extern const char *HXdir_read(struct HXdir *);
+extern void HXdir_close(struct HXdir *);
 extern int HX_copy_dir(const char *, const char *, unsigned int, ...);
 extern int HX_copy_file(const char *, const char *, unsigned int, ...);
 extern int HX_mkdir(const char *);
