@@ -6,6 +6,7 @@ Changes:
 - libxml_helper: redo xml_newnode to take a parent and value string
 - list: unify naming of reverse-direction functions
 - misc: HX_zveclen now returns unsigned from (previous: int)
+- dir: HXdir functions now work with struct HXdir * instead of void *
 Fixes:
 - list: avoid potential shadow warning when using HXclist_{shift,pop}
 
